# Lios

./: .gitignore  Cargo.toml  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
.github/release/: rpm-signing-key.fingerprint
.github/workflows/: release.yml
crates/lios-core/: Cargo.toml
crates/lios-core/src/: atomic.rs  cache.rs  catalog.rs  catalog_transaction.rs  config.rs  credentials.rs  crypto.rs  error.rs  format_v1.rs  format_v2.rs  framed_v1.rs  framed_v2.rs  lib.rs  modelscope.rs  pack.rs  restore.rs  storage.rs  tasks.rs
crates/lios-core/tests/: cache_cleanup.rs  catalog_rebuild.rs  catalog_safety.rs  catalog_v1.rs  catalog_v2.rs  drive_catalog.rs  endpoint_validation.rs  format_v1.rs  format_v2.rs  framed_v1.rs  framed_v2.rs  local_state.rs  modelscope_adapter.rs  modelscope_live.rs  pack_restore.rs  storage_plan.rs  storage_transactions.rs  windows_key_acl.rs
crates/lios-core/tests/fixtures/crypto_v1/: legacy_catalog_v1.enc  legacy_catalog_v1.json  legacy_chunk_v1.enc  legacy_v1.key
docs/: releasing.md
docs/superpowers/plans/: 2026-07-12-transfer-center-hardening.md
docs/superpowers/specs/: 2026-07-12-transfer-center-hardening-design.md
scripts/: test-windows-path-helper.ps1  version.mjs
src/: App.tsx  appTypes.ts  catalogState.ts  commandError.ts  recoveryKeyPresentation.ts  setupWarning.ts  styles.css  taskPresentation.ts
src-tauri/: Cargo.toml  build.rs  build_support.rs  tauri.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_log.rs  catalog_mutation_gate.rs  catalog_probe.rs  catalog_sync.rs  command_error.rs  command_surface.rs  config_mutation_gate.rs  download_service.rs  initialization_gate.rs  lib.rs  main.rs  production_config.rs  recovery_key_service.rs  task_center.rs  task_manager.rs
src-tauri/tests/: app_log.rs  hardening_config.rs
src-tauri/windows/: nsis-hooks.nsh  path-helper.ps1
src/features/catalog/: catalogPresentation.tsx
src/features/tasks/: TaskCenter.tsx  taskApi.ts  taskPresentation.ts  taskTypes.ts  useTasks.ts
tests/: appHardening.test.ts  catalogState.test.ts  recoveryKeyPresentation.test.ts  taskPresentation.test.ts  vitest.setup.ts
tests/components/: TaskCenter.test.tsx  useTasks.test.tsx
