[package]
name = "lios-desktop"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "lios_desktop_lib"
crate-type = ["rlib"]

[[bin]]
name = "lios"
path = "src/main.rs"
test = false

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
lios-core = { path = "../crates/lios-core" }
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tauri = { version = "2.11.5", features = [] }
tauri-plugin-dialog = "2.4.1"
tokio = { version = "1", features = ["fs", "rt-multi-thread"] }
uuid = { version = "1", features = ["serde"] }
walkdir = "2"

[dev-dependencies]
async-trait = "0.1"
httpmock = "0.7"
tempfile = "3"
